--- a/Frontend/Components/Pages/UserInfo.razor
+++ b/Frontend/Components/Pages/UserInfo.razor
@@ -4,17 +4,12 @@
 @using global::Helpers.Models
 
 @inject IJSRuntime JsRuntime
-@inject HttpClient Http
-@inject ApiHelper apiHelper
-@using Microsoft.AspNetCore.Components.Authorization
 @inject ApiHelper ApiHelper
 @inject NavigationManager Navigation
-@inject AuthenticationStateProvider AuthenticationStateProvider
+
 @rendermode InteractiveServer
 
 <h2>User's Info</h2>
-
-<PageTitle>Informação Users</PageTitle>
 
 @if (!string.IsNullOrEmpty(UserSession.Username))
 {
@@ -29,8 +24,8 @@
 @if (accessDenied)
 {
 <div class="alert alert-danger mt-5">
-    <h4>Acceso Negado</h4>
-    <p>Você não tem permissões suficientes para aceder a esta página.</p>
+    <h4>Access Denied</h4>
+    <p>You don't have enough permissions to access this page.</p>
 </div>
 }
 else
@@ -38,7 +33,7 @@ else
 
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="mb-0">Lista de Utilizadores</h2>
+        <h2 class="mb-0">User List</h2>
         <NavLink class="btn btn-success" href="add-user">
             <i class="bi bi-plus-circle-fill me-1"></i>
             Add New User
@@ -131,8 +126,8 @@ else
 @code {
     private List<UserViewModel>? _users;
     private string errorMessage = string.Empty;
-    private bool sessionChecked = false;
-    private bool accessDenied = false; 
+    private bool sessionChecked;
+    private bool accessDenied; 
     
     private string searchUsername = string.Empty;
     private string searchErrorMessage = string.Empty;
@@ -163,7 +158,7 @@ else
             
             if (UserSession.UserId == null)
             {
-                Navigation.NavigateTo("/Login");
+                Navigation.NavigateTo("/login");
             }
             else
             {
@@ -205,7 +200,7 @@ else
         UserSession.Username = string.Empty;
         UserSession.RoleId = null;
 
-        Navigation.NavigateTo("/Login?logout=true", forceLoad: true);
+        Navigation.NavigateTo("/login?logout=true", forceLoad: true);
     }
 
     private async Task DeleteUserById(int userId)
